--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>create a webpage</title>
+    <link rel="stylesheet" href="Style/style.css">
 </head>
 <body>
-    <div>
-    <h2>Search your image here:</h2>
-    <input type="search" name="search" id="">
-    <input type="button" value="Search">
-    </div>
+       <div>
+         <h2>Search your image here:</h2>
+         <input type="search" name="search" id="">
+         <input type="button" value="Search">
+       </div>
+       <div>
+       <img src="image/Kung Fu Panda.jpg" alt="">
+       <a href="">Visit for more</a>
+       </div>
 </body>
 </html>
